--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Misses George🥹</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">29 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why You Need to Be Bored</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -365,7 +365,7 @@
                     <div class="video-info">
                         <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why You Need to Be Bored</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7986,7 +7986,7 @@
                         <div class="video-info">
                             <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Misses George🥹</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">29 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
