--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>POV: A Chef’s Night at the Pass 🍽️ #cooking #shorts #pov #chef</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>POV: A Chef’s Night at the Pass 🍽️ #cooking #shorts #pov #chef</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
