--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Uncensored</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Happy Halloween 🎃👻</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Arthur Misses George🥹</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -970,7 +970,7 @@
                     <div class="video-info">
                         <h3>Tokyo Japan with ItalianBach and Livvy DiMartino</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Uncensored</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>Happy Halloween 🎃👻</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Misses George🥹</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10452,7 +10452,7 @@
                         <div class="video-info">
                             <h3>Tokyo Japan with ItalianBach and Livvy DiMartino</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
