--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Sadhguru rides to San Francisco for the ‘Ecstasy of Enlightenment’ program tomorrow, November 2.</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -937,7 +937,7 @@
                     <div class="video-info">
                         <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5952,7 +5952,7 @@
                         <div class="video-info">
                             <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Sadhguru rides to San Francisco for the ‘Ecstasy of Enlightenment’ program tomorrow, November 2.</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Asks Sadhguru About Communication</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Why Jesus Said "Love Thy Neighbor" | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>1 Full Year To Build A Dream Food Cart - Hot Rod Smoker</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
